GNOME Bugzilla – Bug 738927
Code convention fixes
Last modified: 2014-10-21 18:01:34 UTC
Created attachment 289027 [details] [review] Code cleanup as per gnome coding conventions Code cleanup as per gnome coding conventions
Attachment 289027 [details] pushed as e2a9056 - Code cleanup as per gnome coding conventions