Code cleanup as per gnome coding conventions

Code convention fixes

https://bugzilla.gnome.org/show_bug.cgi?id=738927